# Raytracer-2025

./: Cargo.toml
.github/workflows/: run.yml
assets/: amiya.mtl  arknights_dusk_plush_doll.mtl  cornell_box.mtl  cornell_box2.mtl  drone.mtl  skadi.mtl
src/: aabb.rs  bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  obj.rs  onb.rs  pdf.rs  perlin.rs  quad.rs  ray.rs  rtw_stb_image.rs  sphere.rs  texture.rs  triangle.rs  utility.rs  vec3.rs
