[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
console = "0.16.0"
indicatif = "0.17.11"
lazy_static = "1.5.0"
rand = "0.9.1"
dyn-clone = "1.0.19"
stb_image = "0.3.0"
rayon = "1.10.0"
tobj = "4.0.3"
mimalloc = { version = "0.1", default-features = false }